fixed spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -165,7 +165,7 @@ body {
   background-color: $purple;
   width: 100%;
   margin: 20em 0 0 0;
-  height: 15em;
+  height: 10em;
   justify-content: center;
   align-items: center;
 
